--- a/templates/arcafe_prod-nginx_app.conf.j2
+++ b/templates/arcafe_prod-nginx_app.conf.j2
@@ -1,13 +1,13 @@
 server {
     gzip on;
 
-    listen {{ listen_port }};
-    server_name {{ app }}.local;
+    listen 80;
+    server_name {{ server_name }};
     root /var/www/{{ app }};
     index index.php;
 
-    access_log /var/log/nginx/{{ app }}.access.log;
-    error_log  /var/log/nginx/{{ app }}.error.log;
+    access_log /var/log/nginx/{{ app }}/access.log;
+    error_log  /var/log/nginx/{{ app }}/error.log;
 
     try_files $uri $uri/ /index.php?$query_string;
 
