--- a/templates/arstin_dev-nginx_app.conf.j2
+++ b/templates/arstin_dev-nginx_app.conf.j2
@@ -1,12 +1,12 @@
 server {
-    listen 8080;
+    listen 80;
   
-    server_name {{ app }};
+    server_name {{ server_name }};
     root /var/www/{{ app }}/;
     index index.php;
 
-    access_log /var/log/nginx/{{ app }}.access.log;
-    error_log /var/log/nginx/{{ app }}.error.log;
+    access_log /var/log/nginx/{{ app }}/access.log;
+    error_log /var/log/nginx/{{ app }}/error.log;
 
     try_files $uri $uri/ /index.php?$query_string;
 
